--- a/BlazorWebAppRGPC/Pages/_Layout.cshtml
+++ b/BlazorWebAppRGPC/Pages/_Layout.cshtml
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="BlazorWebAppRGPC.styles.css" rel="stylesheet" />
+    <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
+    <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
+    <script src="https://unpkg.com/@@antv/g2plot@1.1.28/dist/g2plot.js"></script>
+    <script src="_content/AntDesign.Charts/ant-design-charts-blazor.js"></script>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
