--- a/BlazorWebAppRGPC/Shared/NavMenu.razor
+++ b/BlazorWebAppRGPC/Shared/NavMenu.razor
@@ -26,7 +26,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="listStudent">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> List Student
+                <span class="oi oi-list-rich" aria-hidden="true"></span> List Students
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="listClass">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> List Classes
             </NavLink>
         </div>
     </nav>
