--- a/BlazorWebAppRGPC/_Imports.razor
+++ b/BlazorWebAppRGPC/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using BlazorWebAppRGPC
 @using BlazorWebAppRGPC.Shared
+@using AntDesign;
+@using BlazorWebAppRGPC.Model.DTO;
+@using BlazorWebAppRGPC.Model;
