fix convention + delete class

--- a/BlazorWebAppRGPC/Pages/ListClass.razor
+++ b/BlazorWebAppRGPC/Pages/ListClass.razor
@@ -3,31 +3,39 @@
 <h3>ListClass</h3>
 <Button OnClick="()=>ShowPopupClass(null)" Icon="plus">Add</Button>
 
-<Form Model="@classSearch"
-      LabelColSpan="2" WrapperColSpan="4" 
-      OnFinish="OnValidSubmit" OnFinishFailed="OnInvalidSubmit">
-      <FormItem Label="Class Name">
-        <Input @bind-Value="@classSearch.Name" />
-    </FormItem>
-    <FormItem Label="Subject">
-        <Input @bind-Value="@classSearch.SubjectName" />
-    </FormItem>
-    <FormItem Label="Teacher">
-        <Select Mode="default"
-                DataSource="listTeacher"
-        @bind-Value="@classSearch.TeacherId"
-                LabelName="@nameof(Teacher.Name)"
-                ValueName="@nameof(Teacher.Id)">
-        </Select>
-    </FormItem>
-    <FormItem WrapperColOffset="2" WrapperColSpan="4">
-        <Button HtmlType="submit">
-            Search
-        </Button>
-    </FormItem>
+<Form Model="@ClassSearch" OnFinish="OnValidSubmit" OnFinishFailed="OnInvalidSubmit">
+    <Row Gutter="16">
+        <GridCol Span="6">
+            <FormItem Label="Class Name">
+                <Input @bind-Value="@ClassSearch.Name" AllowClear />
+             </FormItem>
+         </GridCol>
+         <GridCol Span="6">
+             <FormItem Label="Subject">
+                 <Input @bind-Value="@ClassSearch.SubjectName" AllowClear />
+             </FormItem>
+         </GridCol>
+         <GridCol Span="6">
+             <FormItem Label="Teacher">
+                 <Select Mode="default"
+                         DataSource="ListTeachers"
+                 @bind-Value="@ClassSearch.TeacherId"
+                         LabelName="@nameof(Teacher.Name)"
+                         ValueName="@nameof(Teacher.Id)" AllowClear>
+                </Select>
+            </FormItem>
+        </GridCol>
+        <GridCol Span="6">
+            <Button HtmlType="submit">
+                Search
+            </Button>
+        </GridCol>
+    </Row>
+
 </Form>
 
-<Table TItem="ClassViewDTO" DataSource="@listClassPage" Total="totalCount" @bind-PageIndex="pageNumber" @bind-PageSize="pageSize" OnChange="OnPaging">
+<Table TItem="ClassViewDTO" DataSource="@ListClassPage" Total="totalCount" 
+    @bind-PageIndex="pageNumber" @bind-PageSize="pageSize" OnChange="OnPaging">
     <Column @bind-Field="context.STT"></Column>
     <Column @bind-Field="context.Name"></Column>
     <Column @bind-Field="context.SubjectName"></Column>
@@ -50,25 +58,25 @@
 </Table>
 
 <Modal Visible="@isPopupVisible" Title="Add/Update Class" Closable="false">
-    <Form Model="@classDTO"
+    <Form Model="@ClassDTO"
           LabelColSpan="5" WrapperColSpan="10"
           OnFinish="OnSubmitSuccess" OnFinishFailed="OnSubmitFail">
         <FormItem Label="Class Name">
-            <Input @bind-Value="@classDTO.Name" />
+            <Input @bind-Value="@ClassDTO.Name" />
         </FormItem>
         <FormItem Label="Subject">
-            <Input @bind-Value="@classDTO.SubjectName" />
+            <Input @bind-Value="@ClassDTO.SubjectName" />
         </FormItem>
         <FormItem Label="Teacher">
             <Select Mode="default"
-                    DataSource="listTeacher"
-            @bind-Value="@classDTO.TeacherId"
+                    DataSource="ListTeachers"
+                    @bind-Value="@ClassDTO.TeacherId"
                     LabelName="@nameof(Teacher.Name)"
-                    ValueName="@nameof(Teacher.Id)">
+                    ValueName="@nameof(Teacher.Id)" AllowClear>
             </Select>
         </FormItem>
-            <Button HtmlType="submit">Save</Button>
-            <Button Type="default" OnClick="_=>close()">Cancel</Button>
+        <Button HtmlType="submit">Save</Button>
+        <Button Type="default" OnClick="_=>close()">Cancel</Button>
     </Form>
 </Modal>
 <style>
